--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "error-capture",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "exports": {
     ".": {
@@ -18,6 +18,7 @@
     "dev": "vite",
     "build": "vite build && vue-tsc --project tsconfig.build.json",
     "preview": "vite preview",
+    "type-check": "vue-tsc --build",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
